# G19s-Imperial-Clock

./: .gitignore  CMakeLists.txt  License.txt  NSIS.template.in  README.md  README.txt  Resource.rc  imperialClock.cpp  imperialClock.h  main.cpp  resources.qrc
lib/: LogitechLCDLib.lib
